Fix breadcrumb on small screens

--- a/ckanext/datalocale/public/css/datalocale.css
+++ b/ckanext/datalocale/public/css/datalocale.css
@@ -788,6 +788,18 @@ float: right;
   margin-right: 5px;
 }
 
+@media (max-width: 767px) {
+  .toolbar .breadcrumb {
+    color: #505050;
+    text-shadow: none;
+  }
+  .toolbar .breadcrumb a {
+    color: #505050;
+    text-shadow: none;
+  }
+}
+
+
 .flag.flag-es {background-position: -16px 0}
 .flag.flag-fr {background-position: 0 -11px}
 .flag.flag-en {background-position: -16px -11px}
